--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ multidict==6.1.0
 numpy==2.2.2
 packaging==24.2
 propcache==0.2.1
+python-dotenv==1.0.1
 requests==2.32.3
 tqdm==4.67.1
 urllib3==2.3.0
