--- a/.github/workflows/run_em_evaluation.yaml
+++ b/.github/workflows/run_em_evaluation.yaml
@@ -46,6 +46,6 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add ${{ env.FILE_NAME }}
+          git add results/${{ env.FILE_NAME }}
           git commit -m "Update results"
           git push
